# cool-compiler

./: .gitconfig  .gitignore  CMakeLists.txt  README.md
input/: Extras.cool  Fib.cool  Parser.cool  TestExtras.cool
intern/: basic.cool  cool-runtime2.s  ignores.conf
src/compiler/: Analyser.cpp  Analyser.h  AsmContainer.cpp  AsmContainer.h  BoolConst.cpp  BoolConst.h  CodeGenerator.cpp  CodeGenerator.h  Config.cpp  Config.h  DispTab.cpp  DispTab.h  Environment.cpp  Environment.h  Error.cpp  Error.h  ErrorType.h  Errors.cpp  Errors.h  FileIO.cpp  FileIO.h  FreeTreeVisitor.cpp  FreeTreeVisitor.h  GraphBuilder.cpp  GraphBuilder.h  IgnConstrs.cpp  Instruction.cpp  Instruction.h  IntConst.cpp  IntConst.h  Intermediater.cpp  Intermediater.h  MemManager.cpp  MemManager.h  Nodes.cpp  Nodes.h  Optimizer.cpp  Optimizer.h  Printer.cpp  Printer.h  (+23 more)
src/parser/: Parser.cpp  Parser.h  location.hh  parser.yy  position.hh  stack.hh
src/scanner/: Scanner.cpp  scanner.ll
test/err1/: input.cool  stderrout.result  testout.sh
test/extra/: asm.expect  testout.sh
test/fib/: asm.result  stderrout.result  test
test/school/: School.cool  asm.expect  testasm.sh
